--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+
 lib64/
 parts/
 sdist/
@@ -44,3 +44,5 @@ Thumbs.db
 
 # Logs
 *.log
+
+!frontend/src/lib/
