--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "14.0.4",
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "lucide-react": "^0.309.0",
+    "framer-motion": "^10.18.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
